--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title></title>
-        <link rel="stylesheet" href="style.css" />
+        <title>My CV</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
-    <body></body>
+    <body>
+        <main>
+            <p>My CV</p>
+        </main>
+    </body>
 </html>
