feat: add basic blocks

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
         <link rel="icon" href="./favicon.ico">
     </head>
     <body>
+        <header class="header">
+            <p>sodpodsods</p>
+        </header>
+        <main class="main">
+            <p>spdp</p>
+        </main>
+        <footer class="footer">
+            <p>sdsd</p>
+        </footer>
     
     </body>
 </html>
