feat: add navigation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     </head>
     <body>
         <header class="header">
-            <p>sodpodsods</p>
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li>Contact information</li>
+                    <li>About me</li>
+                    <li>Skills</li>
+                    <li>Code example</li>
+                    <li>Education</li>
+                    <li>Languages</li>
+                </ul>
+            </nav>
         </header>
         <main class="main">
             <p>spdp</p>
