feat: add links in navigation

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <header class="header">
             <nav class="nav">
                 <ul class="nav-list">
-                    <li>Contact information</li>
-                    <li>About me</li>
-                    <li>Skills</li>
-                    <li>Code example</li>
-                    <li>Education</li>
-                    <li>Languages</li>
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contact information</a></li>
+                    <li class="nav-item"><a href="#summary" class="nav-link">About me</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code example</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
                 </ul>
             </nav>
         </header>
