feat: add simple design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./favicon.ico">
 </head>
 
-<body>
+<body class="body">
     <header class="header">
         <nav class="nav">
             <ul class="nav-list">
@@ -25,17 +25,19 @@
     </header>
     <main class="main main-container">
         <section class="left-side">
-            <section class="section" id="profile">
-                <h1 class="section-title">Darya Nebogina</h1>
-            </section>
-            <section class="section" id="contacts">
-                <h2 class="section-title">Contacts</h2>
-                <ul>
-                    <li>E-mail: dasha.nebogina@mail.ru</li>
-                    <li>Telegram: </li>
-                </ul>
+            <section class="left-border">
+                <section class="section" id="profile">
+                    <img src="./Cat.jpg" width="380" height="507" class="photo" alt="Photo of Darya Nebogina">
+                </section>
+                <section class="section" id="contacts">
+                    <h2 class="left-section-title">Contacts</h2>
+                    <ul>
+                        <li>E-mail: dasha.nebogina@mail.ru</li>
+                        <li>Telegram: @daria_ri_a </li>
+                    </ul>
+                </section>
                 <section class="section" id="education">
-                    <h2 class="section-title">Education</h2>
+                    <h2 class="left-section-title">Education</h2>
                     <ul>
                         <li>Voronezh State University<br>
                             Bachelor's degree in computer science</li>
@@ -44,16 +46,18 @@
             </section>
         </section>
         <section class="right-side">
+            <h1 class="name-section-title">Darya <br> Nebogina</h1>
             <section class="section" id="summary">
-                <h2 class="section-title">About me</h2>
-                <p>I graduated from Voronezh State University with a degree in mathematics and computer science in
+                <h2 class="right-section-title">About me</h2>
+                <p class="about-me">
+                    I graduated from Voronezh State University with a degree in mathematics and computer science in
                     2024.
                     In the near future my goal is to find an interesting job in IT sphere. And I'm interested in
                     frontend development:
                     I'm taking various courses to improve my **hard skills** in this area.</p>
             </section>
             <section class="section" id="skills">
-                <h2 class="section-title">Skills</h2>
+                <h2 class="right-section-title">Skills</h2>
                 <ul>
                     <li>Python</li>
                     <li>HTML, CSS (basic)</li>
@@ -62,9 +66,9 @@
                 </ul>
             </section>
             <section class="section" id="code">
-                <h2 class="section-title">Code example</h2>
+                <h2 class="right-section-title">Code example</h2>
                 <pre>
-                    <code>
+                    <code class="code">
                         function sumTriangularNumbers(n) {
                             if (n < 0) return 0;
                             let sum = 0;
@@ -77,7 +81,7 @@
                 </pre>
             </section>
             <section class="section" id="languages">
-                <h2 class="section-title">Languages</h2>
+                <h2 class="right-section-title">Languages</h2>
                 <ul>
                     <li>English A2-B1</li>
                 </ul>
