--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="https://github.com/darianebogina">My Github</a>
+        <a class="git" href="https://github.com/darianebogina">
+            <img src="./pics/github_logo.svg" alt="The Github's logo" width="50" height="50">
+            <p>My Github</p>
+        </a>
+        <p class="year">2024</p>
+        <a class="rs_logo" href="https://rs.school/courses/javascript-ru">
+            <img src="./pics/rs_js.svg" alt="The RSschool's logo" width="200" height="100">
+        </a>
     </footer>
 
 </body>
