feat: fix design of profile&code blocks

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="left-side">
             <section class="left-border">
                 <section class="section" id="profile">
-                    <img src="./pics/Cat.jpg" width="380" height="507" class="photo" alt="Photo of Darya Nebogina">
+                    <img class="myphoto" src="./pics/Cat.jpg" width="380" height="507" class="photo" alt="Photo of Darya Nebogina">
                 </section>
                 <section class="section" id="contacts">
                     <h2 class="left-section-title">Contacts</h2>
@@ -72,14 +72,14 @@
                 <h2 class="right-section-title">Code example</h2>
                 <pre>
                     <code class="language-js">
-                        function sumTriangularNumbers(n) {
-                            if (n < 0) return 0;
-                            let sum = 0;
-                              for (let i = 1; i <= n; i++) {
-                              sum += (i * (i + 1)) / 2;
-                             }
-                             return sum;
-                           }
+        function sumTriangularNumbers(n) {
+            if (n < 0) return 0;
+            let sum = 0;
+            for (let i = 1; i <= n; i++) {
+                sum += (i * (i + 1)) / 2;
+            }
+            return sum;
+        }
                     </code>
                 </pre>
             </section>
