feat: fix design

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </section>
         </section>
         <section class="right-side">
-            <h1 class="name-section-title">Darya <br> Nebogina</h1>
+            <h1 class="name-section-title">Darya Nebogina</h1>
             <section class="section" id="summary">
                 <h2 class="right-section-title">About me</h2>
                 <p class="about-me">
@@ -70,8 +70,7 @@
             </section>
             <section class="section" id="code">
                 <h2 class="right-section-title">Code example</h2>
-                <pre>
-                    <code class="language-js">
+                <pre><code class="language-js">
         function sumTriangularNumbers(n) {
             if (n < 0) return 0;
             let sum = 0;
@@ -80,8 +79,7 @@
             }
             return sum;
         }
-                    </code>
-                </pre>
+                    </code></pre>
             </section>
             <section class="section" id="languages">
                 <h2 class="right-section-title">Languages</h2>
