feat: add photo of profile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="left-side">
             <section class="left-border">
                 <section class="section" id="profile">
-                    <img class="myphoto" src="./pics/Cat.jpg" width="380" height="507" class="photo" alt="Photo of Darya Nebogina">
+                    <img class="myphoto" src="./pics/myphoto.jpg" width="380" height="507" class="photo" alt="Photo of Darya Nebogina">
                 </section>
                 <section class="section" id="contacts">
                     <h2 class="left-section-title">Contacts</h2>
