feat: redesign footer

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
             <img src="./pics/github_logo.svg" alt="The Github's logo" width="50" height="50">
             <p>My Github</p>
         </a>
-        <p class="year">2024</p>
         <a class="rs_logo" href="https://rs.school/courses/javascript-ru">
             <img src="./pics/rs_js.svg" alt="The RSschool's logo" width="200" height="100">
         </a>
+        <p class="year">Made in 2024</p>
     </footer>
 
 </body>
