feat: add new section projects

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>CV</title>
-    <link rel="icon" href="./pics/favicon.ico">
+    <link rel="icon" href="./pictures/favicon.ico">
     <link rel="stylesheet" href="./highlight/night-owl.min.css">
     <script src="./highlight/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
@@ -22,6 +22,7 @@
                 <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
                 <li class="nav-item"><a href="#code" class="nav-link">Code example</a></li>
                 <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                 <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
             </ul>
         </nav>
@@ -30,7 +31,7 @@
         <section class="left-side">
             <section class="left-border">
                 <section class="section" id="profile">
-                    <img class="myphoto" src="./pics/myphoto.jpg" width="380" height="507" class="photo" alt="Photo of Darya Nebogina">
+                    <img class="myphoto" src="./pictures/myphoto.jpg" width="380" height="507" class="photo" alt="Photo of Darya Nebogina">
                 </section>
                 <section class="section" id="contacts">
                     <h2 class="left-section-title">Contacts</h2>
@@ -57,7 +58,7 @@
                     2024.
                     In the near future my goal is to find an interesting job in IT sphere. And I'm interested in
                     frontend development:
-                    I'm taking various courses to improve my **hard skills** in this area.</p>
+                    I'm taking various courses to improve my <b>hard skills</b> in this area.</p>
             </section>
             <section class="section" id="skills">
                 <h2 class="right-section-title">Skills</h2>
@@ -81,6 +82,14 @@
         }
                     </code></pre>
             </section>
+            <section class="section" id="projects">
+                <h2 class="right-section-title">Projects</h2>
+                <ul class="list">
+                    <li><a class="project" href="https://darianebogina.github.io/rsschool-cv/">
+                        <p>My CV</p>
+                    </a></li>
+                </ul>
+            </section>
             <section class="section" id="languages">
                 <h2 class="right-section-title">Languages</h2>
                 <ul class="list">
@@ -92,11 +101,11 @@
     </main>
     <footer class="footer">
         <a class="git" href="https://github.com/darianebogina">
-            <img src="./pics/github_logo.svg" alt="The Github's logo" width="50" height="50">
+            <img src="./pictures/github_logo.svg" alt="The Github's logo" width="50" height="50">
             <p>My Github</p>
         </a>
         <a class="rs_logo" href="https://rs.school/courses/javascript-ru">
-            <img src="./pics/rs_js.svg" alt="The RSschool's logo" width="200" height="100">
+            <img src="./pictures/rs_js.svg" alt="The RSschool's logo" width="200" height="100">
         </a>
         <p class="year">Made in 2024</p>
     </footer>
