feat: add editorconfig

--- a/index.html
+++ b/index.html
@@ -2,76 +2,77 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>CV</title>
-    <link rel="icon" href="./pictures/favicon.ico">
-    <link rel="stylesheet" href="./highlight/night-owl.min.css">
-    <script src="./highlight/highlight.min.js"></script>
-    <script>hljs.highlightAll();</script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <title>CV</title>
+  <link rel="icon" href="./pictures/favicon.ico">
+  <link rel="stylesheet" href="./highlight/night-owl.min.css">
+  <script src="./highlight/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
 </head>
 
 <body class="body">
-    <header class="header">
-        <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                <li class="nav-item"><a href="#summary" class="nav-link">About me</a></li>
-                <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                <li class="nav-item"><a href="#code" class="nav-link">Code example</a></li>
-                <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-                <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="main main-container">
-        <section class="left-side">
-            <section class="left-border">
-                <section class="section" id="profile">
-                    <img class="myphoto" src="./pictures/myphoto.jpg" width="380" height="507" class="photo" alt="Photo of Darya Nebogina">
-                </section>
-                <section class="section" id="contacts">
-                    <h2 class="left-section-title">Contacts</h2>
-                    <ul>
-                        <li>E-mail: dasha.nebogina@mail.ru</li>
-                        <li>Telegram: @daria_ri_a </li>
-                    </ul>
-                </section>
-                <section class="section" id="education">
-                    <h2 class="left-section-title">Education</h2>
-                    <ul>
-                        <li>Voronezh State University<br>
-                            Bachelor's degree in computer science</li>
-                    </ul>
-                </section>
-            </section>
+  <header class="header">
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+        <li class="nav-item"><a href="#summary" class="nav-link">About me</a></li>
+        <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+        <li class="nav-item"><a href="#code" class="nav-link">Code example</a></li>
+        <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+        <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+        <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="main main-container">
+    <section class="left-side">
+      <section class="left-border">
+        <section class="section" id="profile">
+          <img class="myphoto" src="./pictures/myphoto.jpg" width="380" height="507" class="photo"
+            alt="Photo of Darya Nebogina">
         </section>
-        <section class="right-side">
-            <h1 class="name-section-title">Darya Nebogina</h1>
-            <section class="section" id="summary">
-                <h2 class="right-section-title">About me</h2>
-                <p class="about-me">
-                    I graduated from Voronezh State University with a degree in mathematics and computer science in
-                    2024.
-                    In the near future my goal is to find an interesting job in IT sphere. And I'm interested in
-                    frontend development:
-                    I'm taking various courses to improve my <b>hard skills</b> in this area.</p>
-            </section>
-            <section class="section" id="skills">
-                <h2 class="right-section-title">Skills</h2>
-                <ul class="list">
-                    <li>Python</li>
-                    <li>HTML, CSS (basic)</li>
-                    <li>JavaScript (basic)</li>
-                    <li>SQL</li>
-                </ul>
-            </section>
-            <section class="section" id="code">
-                <h2 class="right-section-title">Code example</h2>
-                <pre><code class="language-js">
+        <section class="section" id="contacts">
+          <h2 class="left-section-title">Contacts</h2>
+          <ul>
+            <li>E-mail: dasha.nebogina@mail.ru</li>
+            <li>Telegram: @daria_ri_a </li>
+          </ul>
+        </section>
+        <section class="section" id="education">
+          <h2 class="left-section-title">Education</h2>
+          <ul>
+            <li>Voronezh State University<br>
+              Bachelor's degree in computer science</li>
+          </ul>
+        </section>
+      </section>
+    </section>
+    <section class="right-side">
+      <h1 class="name-section-title">Darya Nebogina</h1>
+      <section class="section" id="summary">
+        <h2 class="right-section-title">About me</h2>
+        <p class="about-me">
+          I graduated from Voronezh State University with a degree in mathematics and computer science in
+          2024.
+          In the near future my goal is to find an interesting job in IT sphere. And I'm interested in
+          frontend development:
+          I'm taking various courses to improve my <b>hard skills</b> in this area.</p>
+      </section>
+      <section class="section" id="skills">
+        <h2 class="right-section-title">Skills</h2>
+        <ul class="list">
+          <li>Python</li>
+          <li>HTML, CSS (basic)</li>
+          <li>JavaScript (basic)</li>
+          <li>SQL</li>
+        </ul>
+      </section>
+      <section class="section" id="code">
+        <h2 class="right-section-title">Code example</h2>
+        <pre><code class="language-js">
         function sumTriangularNumbers(n) {
             if (n < 0) return 0;
             let sum = 0;
@@ -81,34 +82,34 @@
             return sum;
         }
                     </code></pre>
-            </section>
-            <section class="section" id="projects">
-                <h2 class="right-section-title">Projects</h2>
-                <ul class="list">
-                    <li><a class="project" href="https://darianebogina.github.io/rsschool-cv/">
-                        <p>My CV</p>
-                    </a></li>
-                </ul>
-            </section>
-            <section class="section" id="languages">
-                <h2 class="right-section-title">Languages</h2>
-                <ul class="list">
-                    <li>English A2-B1</li>
-                    <li>Russian (native)</li>
-                </ul>
-            </section>
-        </section>
-    </main>
-    <footer class="footer">
-        <a class="git" href="https://github.com/darianebogina">
-            <img src="./pictures/github_logo.svg" alt="The Github's logo" width="50" height="50">
-            <p>My Github</p>
-        </a>
-        <a class="rs_logo" href="https://rs.school/courses/javascript-ru">
-            <img src="./pictures/rs_js.svg" alt="The RSschool's logo" width="200" height="100">
-        </a>
-        <p class="year">Made in 2024</p>
-    </footer>
+      </section>
+      <section class="section" id="projects">
+        <h2 class="right-section-title">Projects</h2>
+        <ul class="list">
+          <li><a class="project" href="https://darianebogina.github.io/rsschool-cv/">
+              <p>My CV</p>
+            </a></li>
+        </ul>
+      </section>
+      <section class="section" id="languages">
+        <h2 class="right-section-title">Languages</h2>
+        <ul class="list">
+          <li>English A2-B1</li>
+          <li>Russian (native)</li>
+        </ul>
+      </section>
+    </section>
+  </main>
+  <footer class="footer">
+    <a class="git" href="https://github.com/darianebogina">
+      <img src="./pictures/github_logo.svg" alt="The Github's logo" width="50" height="50">
+      <p>My Github</p>
+    </a>
+    <a class="rs_logo" href="https://rs.school/courses/javascript-ru">
+      <img src="./pictures/rs_js.svg" alt="The RSschool's logo" width="200" height="100">
+    </a>
+    <p class="year">Made in 2024</p>
+  </footer>
 
 </body>
 
