fix: code style

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section class="left-border">
         <section class="section" id="profile">
           <img class="myphoto" src="./pictures/myphoto.jpg" width="380" height="507" class="photo"
-            alt="Photo of Darya Nebogina">
+            alt="photo of Darya Nebogina">
         </section>
         <section class="section" id="contacts">
           <h2 class="left-section-title">Contacts</h2>
