fix: fix tag format

--- a/index.html
+++ b/index.html
@@ -17,13 +17,27 @@
   <header class="header">
     <nav class="nav">
       <ul class="nav-list">
-        <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-        <li class="nav-item"><a href="#summary" class="nav-link">About me</a></li>
-        <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-        <li class="nav-item"><a href="#code" class="nav-link">Code example</a></li>
-        <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-        <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-        <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+        <li class="nav-item">
+          <a href="#contacts" class="nav-link">Contacts</a>
+        </li>
+        <li class="nav-item">
+          <a href="#summary" class="nav-link">About me</a>
+        </li>
+        <li class="nav-item">
+          <a href="#skills" class="nav-link">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a href="#code" class="nav-link">Code example</a>
+        </li>
+        <li class="nav-item">
+          <a href="#education" class="nav-link">Education</a>
+        </li>
+        <li class="nav-item">
+          <a href="#projects" class="nav-link">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a href="#languages" class="nav-link">Languages</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -59,7 +73,8 @@
           2024.
           In the near future my goal is to find an interesting job in IT sphere. And I'm interested in
           frontend development:
-          I'm taking various courses to improve my <b>hard skills</b> in this area.</p>
+          I'm taking various courses to improve my <b>hard skills</b> in this area.
+        </p>
       </section>
       <section class="section" id="skills">
         <h2 class="right-section-title">Skills</h2>
@@ -81,14 +96,16 @@
             }
             return sum;
         }
-                    </code></pre>
+        </code></pre>
       </section>
       <section class="section" id="projects">
         <h2 class="right-section-title">Projects</h2>
         <ul class="list">
-          <li><a class="project" href="https://darianebogina.github.io/rsschool-cv/">
+          <li>
+            <a class="project" href="https://darianebogina.github.io/rsschool-cv/">
               <p>My CV</p>
-            </a></li>
+            </a>
+          </li>
         </ul>
       </section>
       <section class="section" id="languages">
