--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <title>CV</title>
   <link rel="icon" href="./pictures/favicon.ico">
   <link rel="stylesheet" href="./highlight/night-owl.min.css">
-  <script src="./highlight/highlight.min.js"></script>
-  <script>hljs.highlightAll();</script>
 </head>
 
 <body class="body">
@@ -45,8 +43,7 @@
     <section class="left-side">
       <section class="left-border">
         <section class="section" id="profile">
-          <img class="myphoto" src="./pictures/myphoto.jpg" width="380" height="507" class="photo"
-            alt="photo of Darya Nebogina">
+          <img class="my-photo" src="./pictures/myphoto.jpg" alt="photo of Darya Nebogina" width="380" height="507">
         </section>
         <section class="section" id="contacts">
           <h2 class="left-section-title">Contacts</h2>
@@ -122,12 +119,13 @@
       <img src="./pictures/github_logo.svg" alt="The Github's logo" width="50" height="50">
       <p>My Github</p>
     </a>
-    <a class="rs_logo" href="https://rs.school/courses/javascript-ru">
+    <a class="rs-logo" href="https://rs.school/courses/javascript-ru">
       <img src="./pictures/rs_js.svg" alt="The RSschool's logo" width="200" height="100">
     </a>
     <p class="year">Made in 2024</p>
   </footer>
 
 </body>
-
+<script src="./highlight/highlight.min.js"></script>
+<script>hljs.highlightAll();</script>
 </html>
