feat: add animation for projects section

--- a/index.html
+++ b/index.html
@@ -100,13 +100,9 @@
       </section>
       <section class="section" id="projects">
         <h2 class="right-section-title">Projects</h2>
-        <ul class="list">
-          <li>
-            <a class="project" href="https://darianebogina.github.io/rsschool-cv/">
-              <p>My CV</p>
-            </a>
-          </li>
-        </ul>
+          <a class="project" href="https://darianebogina.github.io/rsschool-cv/">
+            <img class="preview-of-project" src="./pictures/cv.png" alt="cv's preview">
+          </a>
       </section>
       <section class="section" id="languages">
         <h2 class="right-section-title">Languages</h2>
