feat: add new folder

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2 class="hidden-header">Left border</h2>
         <section class="section" id="profile">
           <h2 class="hidden-header">Profile</h2>
-          <img class="my-photo" src="./pictures/myphoto.jpg" alt="photo of Darya Nebogina" width="380" height="507">
+          <img class="my-photo" src="./images/myphoto.jpg" alt="photo of Darya Nebogina" width="380" height="507">
         </section>
         <section class="section" id="contacts">
           <h2 class="left-section-title">Contacts</h2>
